# KWU-Go2

./: .gitignore  Dockerfile
src/camera_go2/: CMakeLists.txt  package.xml
src/camera_go2/src/: bbox_listener.cpp  image_listener.cpp
src/unitree-go2-ros2/champ/champ_navigation/launch/: slam.launch.py
src/unitree-go2-ros2/robots/configs/go2_config/config/autonomy/: slam.yaml
src/unitree-go2-ros2/robots/configs/go2_config/launch/: gazebo_velodyne.launch.py
src/unitree-go2-ros2/robots/configs/go2_config/worlds/: default.world  gcamp_world.world  industrial_warehouse.world  maze_1_6x5.world  maze_4_metal_6x6.world
src/unitree-go2-ros2/robots/descriptions/go2_description/urdf/: go2_description.urdf
src/unitree-go2-ros2/robots/descriptions/go2_description/xacro/: camera.xacro  gazebo.xacro  laser.xacro  robot.xacro  robot_VLP.xacro
